syntax = "proto3";

package customer;

service Customer {
    rpc GetCustomers(CustomerFilter) returns (stream CustomerRequest){}

    rpc CreateCustomer(CustomerRequest) returns (CustomerResponse){}
}

message CustomerRequest {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;

    message Address {
        string street = 1;
        string city = 2;
        string state = 3;
        string zip = 4;
        bool isShippingAddress = 5;
    }

    repeated Address addresses = 5;
}

message CustomerResponse {
    int32 id = 1;
    bool success = 3;
}

message CustomerFilter {
    string keyword = 1;
}